fix content in <p> html, deleted extra space in variables.css

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             </div>
             <div class="card__text">
               <p>На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.</p>
-              <p>Я знал о существовании неформальной группы в телеграмме, организованной старшими студентами, но до третьего спринта практика довалась достаточно легко, и на свои пару вопросов обходился помощью из местной "Пачки".<br>Все изменилось в третьем спринте. Обилие теории в нем неприятно удивило, из пройденных четырех третий был самый огромный. Вопросов по практике стало больше и я с удовольствием начал захаживать еще и телеграмчик.</p>
+              <p>Я знал о существовании неформальной группы в телеграмме, организованной старшими студентами, но до третьего спринта практика довалась достаточно легко, и на свои пару вопросов обходился помощью из местной "Пачки".<br>Все изменилось в третьем спринте. Обилие теории в нем неприятно удивило, из пройденных четырех третий был самый огромный. Вопросов по практике стало больше и я с удовольствием начал захаживать еще и в телеграмчик.</p>
             </div>
             <div class="card__buttons">
               <button class="card__icon-button" type="button">
